# csvPy

./: .gitignore  18.csv  2025-11-30-sdg.txt  2025-11-30-sdgs.txt  2025-12-01-c.txt  2025-12-01-hj.txt  2025-12-01-j.txt  2025-12-01-k.txt  2025-12-01-kj.txt  2025-12-01-l.txt  2025-12-01-u.txt  26-01-07-32.csv  26-01-07-33.csv  26-01-21-feij.tex  26-01-21-fggsj.tex  26-01-21-fgsgg.tex  26-01-21-fgsj.tex  26-02-14-IsoOsi.txt  26-02-19-logicsLogikConsiderationsBetrachtungen.csv  26-02-19-logicsLogikConsiderationsBetrachtungen.org  26-02-19-logicsLogikConsiderationsBetrachtungen.txt  26-02-19-logicsLogikConsiderationsBetrachtungen2.csv  26-02-19-logicsLogikConsiderationsBetrachtungen2.org  26-02-19-logicsLogikConsiderationsBetrachtungen2.txt  32af_kontinuum_b.csv  32af_kontinuum_c.csv  32af_kontinuum_d.csv  G7PureniuumVersuch.csv  a.out  b2e5pureniuum.csv  code2img2  code2img3  code2img4  code2img4.cpp  concat-reli-016.csv  concat-reli-032b.txt  concat-reli-048.csv  concat-reli-056.csv  concat-reli-065.csv  concat-reli-066.csv  (+43 more)
econs/: befehle.txt  menu
econs/567/src/: main.cpp
econs/econ567/: CMakeLists.txt
econs/econ678/de/: CMakeLists.txt
econs/econ678/de/src/: text.cpp
econs/econ678/en/: CMakeLists.txt
econs/econ678/en/src/: main.cpp
econs/menu/: CMakeLists.txt
econs/menu/include/: mode_text.h
econs/menu/src/: mode_text.cpp
